# edgar

./: .coverage  .env.example  .gitignore  .user.yml  CHANGELOG_NOV_2025.md  DATABASE_RELATIONSHIPS.md  DATABASE_VALIDATION_SUMMARY.md  DATA_DICTIONARY.md  DATA_DICTIONARY_GENERATED.md  PARQUET_VULNERABILITY_ASSESSMENT.md  PIPELINE_RESET_GUIDE.md  POLYGON_OVERNIGHT_RUN.md  POLYGON_TICKER_INFO_ENHANCEMENT.md  PRODUCTION_WORKFLOW.md  README.md  SUPPLEMENTARY_LOADING_METHOD.md  YFINANCE_DATA_PRESERVATION.md  YFINANCE_RATE_LIMIT_REALITY.md  YFINANCE_TESTING.md  analysis.ipynb  assert_assets_ge_liabilities.sql  cleanup_artifacts.py  clear_download_catalog.py  config_utils.py  copy of section of main function from loader.txt  database_conn.py  dbt_project.yml  diagnose_yfinance.py  dim_companies.sql  edgar_analysis_functions.py  edgar_data_loader.py  fct_combined_financials.sql  fct_financials_quarterly.sql  feature_engineering.py  fetch_edgar_archives.py  find_orphan_example.py  future improvements.md  investigate_date_issue.py  investigate_orphans.py  json_parse.py  (+25 more)
analysis/: edgar_analysis_functions.py
data_gathering/: fetch_edgar_archives.py  macro_data_gatherer.py  market_risk_gatherer.py  stock_data_gatherer.py  stock_data_gatherer_polygon.py  stock_info_gatherer.py  ticker_enrichment_massive.py  ticker_info_gatherer_polygon.py
data_processing/: create_test_db.py  edgar_data_loader.py  feature_engineering.py  json_parse.py  json_to_duckdb.py  json_to_duckdb_refactored.py  load_supplementary_data.py  load_ticker_info.py  parquet_converter.py  parquet_converter_cleanup.py  parse_to_parquet.py  summarize_filings.py  unique_value_tables.py
models/: sources.yml
scripts/: agg_coverage.py  check_json_parsing.py  cleanup_artifacts.py  clear_download_catalog.py  dedupe_stock_history.py  diagnose_yfinance.py  downloads_scanner.py  find_orphan_example.py  generate_prioritized_backlog.py  generate_ticker_info_backlog.py  investigate_date_issue.py  run_local_schema_tasks.py  stage_stock_fetch_plan.py  ticker_coverage.py  update_data_dictionary.py
tests/: assert_assets_ge_liabilities.sql  assert_positive_total_assets.sql  conftest.py  dbg_zero_or_null_assets.sql  staging.yml  test_config_utils_extended.py  test_database_conn_extended.py  test_database_validation.py  test_downloads_scanner.py  test_generate_ticker_info_backlog.py  test_integration_parse_load.py  test_json_parser.py  test_json_parsers.py  test_json_parsers_edgecases.py  test_logging_and_untrackable.py  test_orphan_fix.py  test_polygon_capacity.py  test_polygon_client_retry.py  test_polygon_gap_clamp.py  test_polygon_missing_intervals.py  test_polygon_rate_limit_behavior.py  test_polygon_single_worker_reuse.py  test_polygon_url_construction.py  test_prioritizer.py  test_prioritizer_functionality.py  test_prioritizer_ticker_info.py  test_rate_limiter_instrumentation.py  test_stock_aggs_untrackable.py  test_supplementary_loading.py  test_ticker_info_pipeline.py  test_ticker_info_prioritizer_integration.py  (+7 more)
(+20 files in other folders)
